---
title: World State Data Model
---
erDiagram
    CLUSTER ||--o{ NODE : contains
    CLUSTER ||--o{ GPU_RESERVATION : "reserves capacity"
    NODE ||--o{ REPLICA : hosts
    APPLICATION ||--o{ REPLICA : "has instances"
    APPLICATION ||--|| PERFORMANCE_PROFILE : "profiled by"
    APPLICATION ||--|| SLA : defines
    APPLICATION ||--|| VLLM_METRICS : "measured by"
    APPLICATION ||--|| SCALING_HISTORY : "tracked by"
    APPLICATION ||--o{ GPU_RESERVATION : "reserved for"
    MODEL ||--o{ APPLICATION : "served by"
    MODEL ||--o{ CACHE_LOCATION : "cached at"
    NODE ||--o{ CACHE_LOCATION : stores

    CLUSTER {
        string cluster_id PK
        float fragmentation_score
    }

    NODE {
        string node_id PK
        string cluster_id FK
        int total_gpus "always 8"
        int allocated_gpus
        int free_gpus
        string status "ready|cordoned|draining|down"
    }

    APPLICATION {
        string app_id PK
        string model_id FK
        int gpus_per_replica "1|2|4|8"
        int priority "0=highest"
        int min_replicas
        string failure_domain_rule "spread_clusters|none"
    }

    SLA {
        string app_id PK
        int max_p99_ttft_ms
        int max_p99_tps
    }

    REPLICA {
        string replica_id PK
        string app_id FK
        string cluster_id FK
        string node_id FK
        int gpus
        string status "pending|running|draining|terminated"
    }

    MODEL {
        string model_id PK
        string name
        int size_gb
    }

    CACHE_LOCATION {
        string model_id PK
        string cluster_id PK
        string node_id PK "nullable for CLUSTER_STORAGE"
        string tier "GPU_MEMORY|LOCAL_NVME|CLUSTER_STORAGE"
        timestamp cached_at
    }

    PERFORMANCE_PROFILE {
        string app_id PK
        float tps_per_replica
        float ttft_p99_ms
        float cold_start_seconds
        float warm_start_seconds
    }

    VLLM_METRICS {
        string app_id PK
        int aggregated_from "replica count"
        float avg_waiting_queue_depth
        float max_waiting_queue_depth
        float avg_running_queue_depth
        float avg_batch_utilization
        float avg_kv_cache_utilization
        float max_kv_cache_utilization
        float total_tokens_per_second
        float avg_time_to_first_token_ms
        float p99_time_to_first_token_ms
        timestamp measured_at
    }

    GPU_RESERVATION {
        string reservation_id PK
        string cluster_id FK
        string node_id "nullable: cluster-scoped"
        int gpus
        string for_app_id FK
        timestamp created_at
        int ttl_seconds "2x expected startup"
        string status "active|fulfilled|expired"
    }

    SCALING_HISTORY {
        string app_id PK
        timestamp last_scale_up_at
        timestamp last_scale_down_at
        int consecutive_scale_down_signals "reset on scale-up"
    }
